--- a/markets/markets-railways.qmd
+++ b/markets/markets-railways.qmd
@@ -1,38 +1,45 @@
 ---
-title: "Железная дорога"
+title: "Сухопутная контейнерная логистика"
 sidebar: false
-format:
-   html: 
-     page-layout: custom
-     grid:
-      body-width: 900px
+format: 
+  html:
+    page-layout: custom
+    grid:
+       margin-width: 300px
+       body-width: 900px
+
 ---
 
-# ![](../images/railways-icon.svg) Сухопутная логистика {.my-custom-class style="margin-left:8%;"}
+# ![](../images/icon-barcode.svg) Сухопутная контейнерная логистика {.my-custom-class style="margin-left:3%;"}
 
-::: grid
-::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
-### Индексы
+![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
 
-```{r, warning = FALSE, echo = FALSE, message = FALSE}
-library(highcharter)
-
-hchart(LakeHuron, color = "#1A4AFC", name = "Ставка") %>% 
-  hc_tooltip(enabled = "false") # хотим убрать всплывающие подписи. но надо по другому - так не работает. 
-
-```
-:::
-
-::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
+::: {.grid style="margin-left:0%"}
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
-**31.08.2024 Сухопутная логистика**
+*16.09.2024* 
 
-Что ещё не менялось в 2024 г.? Ставки на полувагоны! Ставки предоставления полувагонов под перевозку угля стабильны и уже 8-ой месяц подряд колеблются в пределах нескольких процентов.
+**Старым проблемам — новые ставки** Сухопутные пограничные переходы и терминалы Дальнего Востока не могут справиться с входящим потоком контейнеров: ставки на их доставку из Китая по железной дороге выросли до 12% за месяц. ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-**31.08.2024 Сухопутная логистика**
+**Доставка импортных грузов обходится всё дороже** Пограничные переходы продолжают оставаться слабым звеном в цепочке контейнерной логистики на маршрутах из Китая в Россию: время перегруза может достигать месяца. ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-Что ещё не менялось в 2024 г.? Ставки на полувагоны! Ставки предоставления полувагонов под перевозку угля стабильны и уже 8-ой месяц подряд колеблются в пределах нескольких процентов.
+**Ставки пользования контейнером** Участники рынка контейнерных перевозок не могут приблизиться к решению проблемы дисбаланса экспортно-импортных потоков. Из-за нехватки грузовой базы порожняя тара продолжает копиться на терминалах Центральной России, в то время как в Китае найти свободный контейнер для отправки грузов на экспорт по-прежнему сложно. ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+**Полувагоны все активнее спасают рынок от дефицита платформ** В сентябре спотовые ставки аренды фитинговых платформ остались близки к показателям августа для 40- и 80-футовых платформ и уточнены для 60- футовых платформ. ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
+
+**Контейнерные перевозки на сети РЖД остаются в стабильном «плюсе»** В августе во всех видах сообщения по сети РЖД перевезено 673,9 тыс. ДФЭ (+7,7% г/г). География и объемы перевозок остались близки к показателям предыдущего месяца, за некоторыми исключениями. ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
+
+**Экспорт пытается удержать объемы прошлого года** Согласно оценкам ЦЦИ в августе в экспортном сообщении по сети РЖД перевезено 135,1 тыс. ДФЭ (-4,5% г/г), в том числе 128,7 тыс. ДФЭ гружёных контейнеров (-2,6% г/г). ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
+:::
+
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
+### События
+
+*31 мая 2024. Пятница с ЦЦИ: уголь*
+
+[Материалы →](../events/2024-05-31-coal.qmd)
+
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
@@ -41,25 +48,5 @@ hchart(LakeHuron, color = "#1A4AFC", name = "Ставка") %>%
 [Методология ценовых индикаторов](../methodology/methodology-benchmark-pbc.qmd)
 
 [Спецификация ставок сухопутной логистики](../methodology/specs-logistics.qmd)
-:::
-
-::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
-### Мероприятия
-
-*31.08.2024* Пятница с ЦЦИ: уголь
-
-Материалы вебинара
-:::
-
-::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
-### Аналитика
-:::
-
-::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
-### Демо-версия
-
-![](../fig/2024-06-logisticts-container-p1.png) Подпишитесь, чтобы прочитать полную версию.
-
-Контакты клиентской службы: [subscribe\@pbc-index.ru](mailto:subscribe@pbc-index.ru)
 :::
 :::
