--- a/markets/markets-railways-van.qmd
+++ b/markets/markets-railways-van.qmd
@@ -21,17 +21,17 @@ format:
 
 *30.09.2024* 
 
-**Ставки на полувагоны замерли в ожидании индексации тарифа РЖД** Ставки на предоставление полувагонов под перевозку угля не изменились в сентябре, однако стоимость логистики стала доступнее для экспортёров. ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd) 
+**Ставки на полувагоны замерли в ожидании индексации тарифа РЖД.** Ставки на предоставление полувагонов под перевозку угля не изменились в сентябре, однако стоимость логистики стала доступнее для экспортёров. ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd) 
 
-**Транспортировка угля в сентябре стала немного доступнее** В настоящее время участники рынка ожидают принятия решения о величине индексации тарифа РЖД за пользование инфраструктурой. После этого операторы пересмотрят и стоимость своих услуг по предоставлению подвижного состава (в которую входит оплата тарифа РЖД за порожний подсыл вагона). ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd) 
+**Транспортировка угля в сентябре стала немного доступнее.** В настоящее время участники рынка ожидают принятия решения о величине индексации тарифа РЖД за пользование инфраструктурой. После этого операторы пересмотрят и стоимость своих услуг по предоставлению подвижного состава (в которую входит оплата тарифа РЖД за порожний подсыл вагона). ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd) 
 
-**Рентабельность операторского бизнеса находится под вопросом** Возросший пассажиропоток на Юге России, а также работы по развитию ж.-д инфраструктуры - традиционные сезонные факторы, негативно влияющие на объемы и скорость доставки угля в порты. ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd) 
+**Рентабельность операторского бизнеса находится под вопросом.** Возросший пассажиропоток на Юге России, а также работы по развитию ж.-д инфраструктуры - традиционные сезонные факторы, негативно влияющие на объемы и скорость доставки угля в порты. ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd) 
 
-**Ценовые предложения на рынке угля** Цены на энергетический уголь калорийностью 6000 ккал/кг на базисе FOB Дальний Восток выросли в сентябре на 2 долл./т на фоне пополнения запасов перед праздниками. ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
+**Ценовые предложения на рынке угля.** Цены на энергетический уголь калорийностью 6000 ккал/кг на базисе FOB Дальний Восток выросли в сентябре на 2 долл./т на фоне пополнения запасов перед праздниками. ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
 
-**Уголь тянет погрузку на сети РЖД вниз** Погрузка каменного угля на сети РЖД в августе незначительно выросла к показателям предыдущих летних месяцев и составила 26,5 млн т (-4,7% г/г). ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd) 
+**Уголь тянет погрузку на сети РЖД вниз.** Погрузка каменного угля на сети РЖД в августе незначительно выросла к показателям предыдущих летних месяцев и составила 26,5 млн т (-4,7% г/г). ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd) 
 
-**Полувагоны меняют уголь и щебень на контейнеры и руду** В условиях ужесточения денежно-кредитной политики, замедления строительной активности и сокращения расходов на инфраструктурные проекты в России, на сети РЖД продолжает снижаться погрузка стройматериалов. ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd) 
+**Полувагоны меняют уголь и щебень на контейнеры и руду.** В условиях ужесточения денежно-кредитной политики, замедления строительной активности и сокращения расходов на инфраструктурные проекты в России, на сети РЖД продолжает снижаться погрузка стройматериалов. ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd) 
 
 ::: 
 
