--- a/markets/markets-railways.qmd
+++ b/markets/markets-railways.qmd
@@ -20,17 +20,17 @@ format:
 
 *16.09.2024* 
 
-**Старым проблемам — новые ставки** Сухопутные пограничные переходы и терминалы Дальнего Востока не могут справиться с входящим потоком контейнеров: ставки на их доставку из Китая по железной дороге выросли до 12% за месяц. ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+**Старым проблемам — новые ставки.** Сухопутные пограничные переходы и терминалы Дальнего Востока не могут справиться с входящим потоком контейнеров: ставки на их доставку из Китая по железной дороге выросли до 12% за месяц. ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-**Доставка импортных грузов обходится всё дороже** Пограничные переходы продолжают оставаться слабым звеном в цепочке контейнерной логистики на маршрутах из Китая в Россию: время перегруза может достигать месяца. ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+**Доставка импортных грузов обходится всё дороже.** Пограничные переходы продолжают оставаться слабым звеном в цепочке контейнерной логистики на маршрутах из Китая в Россию: время перегруза может достигать месяца. ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-**Ставки пользования контейнером** Участники рынка контейнерных перевозок не могут приблизиться к решению проблемы дисбаланса экспортно-импортных потоков. Из-за нехватки грузовой базы порожняя тара продолжает копиться на терминалах Центральной России, в то время как в Китае найти свободный контейнер для отправки грузов на экспорт по-прежнему сложно. ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+**Ставки пользования контейнером.** Участники рынка контейнерных перевозок не могут приблизиться к решению проблемы дисбаланса экспортно-импортных потоков. Из-за нехватки грузовой базы порожняя тара продолжает копиться на терминалах Центральной России, в то время как в Китае найти свободный контейнер для отправки грузов на экспорт по-прежнему сложно. ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-**Полувагоны все активнее спасают рынок от дефицита платформ** В сентябре спотовые ставки аренды фитинговых платформ остались близки к показателям августа для 40- и 80-футовых платформ и уточнены для 60- футовых платформ. ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
+**Полувагоны все активнее спасают рынок от дефицита платформ.** В сентябре спотовые ставки аренды фитинговых платформ остались близки к показателям августа для 40- и 80-футовых платформ и уточнены для 60- футовых платформ. ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
 
-**Контейнерные перевозки на сети РЖД остаются в стабильном «плюсе»** В августе во всех видах сообщения по сети РЖД перевезено 673,9 тыс. ДФЭ (+7,7% г/г). География и объемы перевозок остались близки к показателям предыдущего месяца, за некоторыми исключениями. ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
+**Контейнерные перевозки на сети РЖД остаются в стабильном «плюсе».** В августе во всех видах сообщения по сети РЖД перевезено 673,9 тыс. ДФЭ (+7,7% г/г). География и объемы перевозок остались близки к показателям предыдущего месяца, за некоторыми исключениями. ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
 
-**Экспорт пытается удержать объемы прошлого года** Согласно оценкам ЦЦИ в августе в экспортном сообщении по сети РЖД перевезено 135,1 тыс. ДФЭ (-4,5% г/г), в том числе 128,7 тыс. ДФЭ гружёных контейнеров (-2,6% г/г). ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
+**Экспорт пытается удержать объемы прошлого года.** Согласно оценкам ЦЦИ в августе в экспортном сообщении по сети РЖД перевезено 135,1 тыс. ДФЭ (-4,5% г/г), в том числе 128,7 тыс. ДФЭ гружёных контейнеров (-2,6% г/г). ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
