--- a/events.qmd
+++ b/events.qmd
@@ -18,3 +18,7 @@ title: "События"
 -   Прогноз погоды на рынке морского фрахта зерна
 
 [Материалы вебинара](events/2024-09-13-wheat.qmd)
+
+### Пятница с ЦЦИ: уголь (31 мая 2024)
+
+[Материалы вебинара](events/2024-05-31-coal.qmd)
