--- a/index.qmd
+++ b/index.qmd
@@ -30,7 +30,6 @@ format:
 13 сентября 2024. **Пятница с ЦЦИ: хлеб с маслом**
 
 [Материалы →](events/2024-09-13-wheat.qmd)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
@@ -47,13 +46,12 @@ format:
 
 [Подробнее →](pbc-index.qmd)
 
+**07.10.2024 Пшеница**
 
-**01.10.2024 Фрахт нефти**
 
-Ставки фрахта на перевозку нефти на Дальнем Востоке находятся на высоком уровне, ставки из западных портов должны начать восстановление в октябре.
+Экспортные цены на пшеницу за неделю выросли на 9 долл. Турция смягчила запрет на импорт пшеницы.
 
-[Подробнее →](markets/markets-sea-freight.qmd)
-
+[Подробнее →](markets/markets-wheat.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
