--- a/markets/markets-sea-freight.qmd
+++ b/markets/markets-sea-freight.qmd
@@ -33,11 +33,11 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*23.09.2024 Перевозки зерна*
+*07.10.2024 Перевозки зерна*
 
-**Активность в Турции и Египте дает надежду на рост ставок**
+**Октябрь начался с роста Coaster**
 
-Ставки фрахта для балкеров типа Handysize (16-32 тыс. т) остались на уровне прошлой недели, но отмечается повышенный спрос на маршрутах "Черное море-Египет" и "Черное море - Мерсин, Турция". Балкеры типа Coaster выросли на 2,5% на маршрутах в Турцию.
+Стоимость транспортировки зерна балкерами типа Handysize осталась на уровне прошлой недели. Ставки фрахта для Coaster выросли на 15,8% н/н.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
