charts for chemicals and agro

--- a/demo-subscription.qmd
+++ b/demo-subscription.qmd
@@ -15,12 +15,11 @@ format:
 
 Данные и отчеты направляются по электронной почте или API.
 
-Обратитесь, чтобы подписаться на полную отчетов. 
+Обратитесь, чтобы подписаться на полную отчетов.
 
-Контакты клиентской службы: [subscribe@pbc-index.ru](mailto:subscribe@pbc-index.ru)
+Контакты клиентской службы: [subscribe\@pbc-index.ru](mailto:subscribe@pbc-index.ru)
 
-
-### Морской фрахт 
+### Морской фрахт
 
 [Перевозки нефти. Ставки фрахта (еженедельно)](/reports/2024-07-17_PBC_Weekly_Crude_Freight.pdf)
 
@@ -36,13 +35,21 @@ format:
 
 ### Российское растениеводство
 
-[Экспортные цены на пшеницу (еженедельно)](reports/2024-04-25 PBC Weekly Wheat.pdf)
+[Экспортные цены на пшеницу (еженедельно)](reports/2024-04-25%20PBC%20Weekly%20Wheat.pdf)
 
-[Подсолнечное масло (ежемесячно)](reports/2024-04 GPB Monthly Sunflower Oil.pdf)
+[Подсолнечное масло (ежемесячно)](reports/2024-04%20GPB%20Monthly%20Sunflower%20Oil.pdf)
 
 ### Российская сухопутная логистика
 
-[Сухопутная логистика. Полувагоны](reports/2024-06 PBC Monthly Logistics. Open wagons.pdf)
+[Сухопутная логистика. Полувагоны](reports/2024-06%20PBC%20Monthly%20Logistics.%20Open%20wagons.pdf)
 
-[Сухопутная контейнерная логистика](reports/2024-07 PBC Monthly Logistics. Flat wagons.pdf)
+[Сухопутная контейнерная логистика](reports/2024-07%20PBC%20Monthly%20Logistics.%20Flat%20wagons.pdf)
 
+
+### Азотные удобрения 
+
+[Азотные удобрения (еженедельно)](reports/2024-10-07%20ЦЦИ%20Азотные%20удобрения.pdf)
+
+[Азотные удобрения (еженедельно)](reports/2024-09-30%20ЦЦИ%20Азотные%20удобрения.pdf)
+
+[Азотные удобрения (еженедельно)](reports/2024-09-23%20ЦЦИ%20Азотные%20удобрения.pdf)
