--- a/methodology/specs-sunflower.qmd
+++ b/methodology/specs-sunflower.qmd
@@ -12,21 +12,15 @@ fig-format: svg
 
 Продукт и его характеристики
 
-+---------------------------+---------------------------------------------------------------------------------+-------------------+
-| Продукт                   | Характеристика                                                                  | Сроки поставки    |
-+===========================+=================================================================================+===================+
-| Russian Sunflower Oil FOB | *сырое нерафинированное подсолнечное масло, масло                               | 15-45 дней со дня |
-| Black Sea                 | подсолнечное нерафинированное высший сорт (наливом), масло подсолнечное         | публикации        |
-|                           | нерафинированное первый сорт (наливом), масло подсолнечное нерафинированное для |                   |
-|                           | промышленной переработки*                                                       |                   |
-+---------------------------+---------------------------------------------------------------------------------+-------------------+
+| Продукт                             | Характеристика                                                                                                                                                                                                                      | Сроки поставки               |
+|-------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------|
+| Russian Sunflower Oil FOB Black Sea | *сырое нерафинированное подсолнечное масло, масло подсолнечное нерафинированное высший сорт (наливом), масло подсолнечное нерафинированное первый сорт (наливом), масло подсолнечное нерафинированное для промышленной переработки* | 15-45 дней со дня публикации |
 
 #### Базис
 
-Базис
-Цены на подсолнечное масло оцениваются ежемесячно на базисах:
+Базис Цены на подсолнечное масло оцениваются ежемесячно на базисах:
 
--	FOB Novorossiisk
+-   FOB Novorossiisk
 
 #### Объем партии
 
@@ -40,10 +34,10 @@ fig-format: svg
 
 Евро/т
 
-Юань/т 
+Юань/т
 
 Турецкая лира/т
 
 #### Сроки проведения опроса
 
-Ежемесячно. 
+Ежемесячно.
