--- a/pbc-index.qmd
+++ b/pbc-index.qmd
@@ -12,7 +12,7 @@ library(highcharter)
 library(tidyr)
 library(magrittr)
 
-colors = c("#1A4AFC", "#FF9500", '#82096c', '#d1e5ff', '#44bf78', '#f6514c', '#c3b0ef')
+colors = c("#1a4afc", '#28055a', '#6d7aa5', '#82096c', '#d1e5ff', '#44bf78', '#f6514c',  "#FF9500", '#c3b0ef', '#d0d0d0', '#ffffff', '#000000' )
 
 # прочитать и преобразовать файл Excel с данными
 
@@ -97,11 +97,11 @@ index_plot <- highchart() %>%
       list(title = list(text = "Индекс сырьевых цен ЦЦИ, янв. 2022 = 100"), showFirstLabel = TRUE, max = 150, showLastLabel=TRUE,opposite = FALSE),
       list(title = list(text = "USD/RUB, рублей за доллар"), showLastLabel = FALSE, opposite = TRUE, reversed = TRUE)) %>%
    hc_add_series(df_index,type="line", hcaes(x = date, y = value, group=index), color = colors[1]) %>% 
-   hc_add_series(df_noil_index,type="line", hcaes(x = date, y = value, group=index), color = colors[3], visible = TRUE) %>%
-   hc_add_series(df_fuel_index,type="line", hcaes(x = date, y = value, group=index), color = colors[7], visible = FALSE) %>%
-   hc_add_series(df_agro_index,type="line", hcaes(x = date, y = value, group=index), color = colors[6], visible = FALSE) %>%
-   hc_add_series(df_fert_index,type="line", hcaes(x = date, y = value, group=index), color = colors[5], visible = FALSE) %>%
-   hc_add_series(df_usdrub,type="line", hcaes(x = date, y = value, group=index), color = colors[2],  yAxis=1, visible = FALSE)
+   hc_add_series(df_noil_index,type="line", hcaes(x = date, y = value, group=index), color = colors[2], visible = TRUE) %>%
+   hc_add_series(df_fuel_index,type="line", hcaes(x = date, y = value, group=index), color = colors[12], visible = FALSE) %>%
+   hc_add_series(df_agro_index,type="line", hcaes(x = date, y = value, group=index), color = colors[3], visible = FALSE) %>%
+   hc_add_series(df_fert_index,type="line", hcaes(x = date, y = value, group=index), color = colors[4], visible = FALSE) %>%
+   hc_add_series(df_usdrub,type="line", hcaes(x = date, y = value, group=index), color = colors[8],  yAxis=1, visible = FALSE)
 
 # поменять названия месяцев на русские. по умолчанию - на английском
 index_plot$x$conf_opts$lang$months = c("Январь"	,"Февраль",	"Март"	,"Апрель"	,"Май",	"Июнь", "Июль",	"Август",	"Сентябрь",	"Октябрь",	"Ноябрь",	"Декабрь")
@@ -115,11 +115,11 @@ index_plot
 
 ------------------------------------------------------------------------
 
-**Изменение Индекса сырьевых цен ЦЦИ к предыдущей неделе: [+0,3 п.]{.my-custom-class style="color:#44bf78;"}** ([**-3,3 п.**]{.my-custom-class style="color:#f6514c;"} за последние 4 недели)
+**Изменение Индекса сырьевых цен ЦЦИ к предыдущей неделе: [+1,8 п.]{.my-custom-class style="color:#44bf78;"}** ([**+1,7 п.**]{.my-custom-class style="color:#44bf78;"} за последние 4 недели)
 
-Наибольшие изменения цен товаров за неделю: трубопроводный газ [**+7,3%**]{.my-custom-class style="color:#44bf78;"}, нефть [**-1,3%**]{.my-custom-class style="color:#f6514c;"}
+Наибольшие изменения цен товаров за неделю: подсолнечное масло [**+6,5%**]{.my-custom-class style="color:#44bf78;"}, трубопроводный газ [**+5,3%**]{.my-custom-class style="color:#44bf78;"}
 
-Наибольшие вклады в изменение Индекса за неделю: трубопроводный газ [**+0,6 п.**]{.my-custom-class style="color:#44bf78;"}, нефть [**-0,5 п.**]{.my-custom-class style="color:#f6514c;"}
+Наибольшие вклады в изменение Индекса за неделю: трубопроводный газ [**+0,6 п.**]{.my-custom-class style="color:#44bf78;"}, нефть [**+0,5 п.**]{.my-custom-class style="color:#44bf78;"}
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 
@@ -137,8 +137,8 @@ factor_plot <- highchart() %>%
    hc_exporting(enabled = TRUE) %>% 
    hc_xAxis(type = 'datetime') %>%
    hc_yAxis(title = list(text = "Вклад товаров в изменение индекса за 4 недели, п.")) %>%
-   hc_add_series(df_factor, hcaes(x = date, y = round(value,2), group = X1), type = 'column', pointWidth = 15) %>%
-   hc_add_series(df_diff, hcaes(x = date, y = round(value,2), group = X1), type = 'line', marker = FALSE, color = colors[1])
+   hc_add_series(df_factor, hcaes(x = date, y = round(value,2), group = X1), type = 'column', pointWidth = 15, color = colors[1:10]) %>%
+   hc_add_series(df_diff, hcaes(x = date, y = round(value,2), group = X1), type = 'line', marker = FALSE, color = colors[12])
 
 # поменять названия месяцев на русские. по умолчанию - на английском
 factor_plot$x$conf_opts$lang$months = c("Январь"	,"Февраль",	"Март"	,"Апрель"	,"Май",	"Июнь", "Июль",	"Август",	"Сентябрь",	"Октябрь",	"Ноябрь",	"Декабрь")
@@ -186,7 +186,7 @@ discount_plot <- highchart() %>%
       list(title = list(text = "Дисконт, %"), showLastLabel = FALSE, opposite = TRUE, max = 50, min = 0)) %>%
    hc_add_series(df_index,type="line", hcaes(x = date, y = value, group=index), color = colors[1]) %>% 
    hc_add_series(df_index_world,type="line", hcaes(x = date, y = value, group=index), color = colors[2], visible = TRUE) %>%
-   hc_add_series(df_discount,type="column", hcaes(x = date, y = value, group=index), color = colors[4],  yAxis=1, visible = TRUE)
+   hc_add_series(df_discount,type="column", hcaes(x = date, y = value, group=index), color = colors[3],  yAxis=1, visible = TRUE)
 
 # поменять названия месяцев на русские. по умолчанию - на английском
 discount_plot$x$conf_opts$lang$months = c("Январь"	,"Февраль",	"Март"	,"Апрель"	,"Май",	"Июнь", "Июль",	"Август",	"Сентябрь",	"Октябрь",	"Ноябрь",	"Декабрь")
