--- a/markets/markets-railways.qmd
+++ b/markets/markets-railways.qmd
@@ -21,27 +21,47 @@ format:
 
 **Старым проблемам — новые ставки.** Сухопутные пограничные переходы и терминалы Дальнего Востока не могут справиться с входящим потоком контейнеров: ставки на их доставку из Китая по железной дороге выросли до 12% за месяц.
 
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-**Доставка импортных грузов обходится всё дороже.** Пограничные переходы продолжают оставаться слабым звеном в цепочке контейнерной логистики на маршрутах из Китая в Россию: время перегруза может достигать месяца.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-**Ставки пользования контейнером.** Участники рынка контейнерных перевозок не могут приблизиться к решению проблемы дисбаланса экспортно-импортных потоков. Из-за нехватки грузовой базы порожняя тара продолжает копиться на терминалах Центральной России, в то время как в Китае найти свободный контейнер для отправки грузов на экспорт по-прежнему сложно.
+-   Владельцы контейнерного оборудования продолжают увеличивать субсидии для возврата своей тары в Китай. Субсидия за пользование 40-футовым контейнером на маршруте Москва - Шанхай превысила 2 тыс.долл.
+-   Вместе с началом отправок контейнеров в полувагонах из Забайкальска в августе обновлён очередной рекорд по объёму таких перевозок на сети РЖД.
+-   Повышение ключевой ставки банка России до 19% снизит доступность пополнения вагонного парка для контейнерных операторов.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+:::
 
-**Полувагоны все активнее спасают рынок от дефицита платформ.** В сентябре спотовые ставки аренды фитинговых платформ остались близки к показателям августа для 40- и 80-футовых платформ и уточнены для 60- футовых платформ.
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+### Стоимость железнодорожной контейнерной перевозки
 
-**Контейнерные перевозки на сети РЖД остаются в стабильном «плюсе».** В августе во всех видах сообщения по сети РЖД перевезено 673,9 тыс. ДФЭ (+7,7% г/г). География и объемы перевозок остались близки к показателям предыдущего месяца, за некоторыми исключениями.
+```{r,warning = FALSE, echo = FALSE, message = FALSE}
 
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+library(highcharter)
+library(openxlsx)
+library(tidyr)
 
-**Экспорт пытается удержать объемы прошлого года.** Согласно оценкам ЦЦИ в августе в экспортном сообщении по сети РЖД перевезено 135,1 тыс. ДФЭ (-4,5% г/г), в том числе 128,7 тыс. ДФЭ гружёных контейнеров (-2,6% г/г).
+df <- read.xlsx(xlsxFile = '../xls/сухопутная логистика.xlsx', sheet = 1, detectDates = TRUE, startRow = 1) 
+dt = names(df)
+dt = as.Date(as.numeric(dt), origin = "1899-12-30")
+value = as.numeric(df[7,])
+df = data.frame(dt = dt, value = value)
+df = df[!is.na(df$value),]
 
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+hc = highchart() %>% 
+   hc_add_series(df, type = "line", hcaes(x = dt, y = value), color = "#1A4AFC", name = "Стоимость железнодорожной контейнерной перевозки") %>% 
+   hc_xAxis(type = 'datetime') %>% 
+   hc_yAxis(title  = list(text = 'тыс.руб. с учётом НДС')) %>% 
+   hc_exporting(enabled = FALSE) %>% 
+   hc_tooltip(enabled  = FALSE)
+
+# поменять названия месяцев на русские. по умолчанию - на английском
+hc$x$conf_opts$lang$months = c("Январь"	,"Февраль",	"Март"	,"Апрель"	,"Май",	"Июнь", "Июль",	"Август",	"Сентябрь",	"Октябрь",	"Ноябрь",	"Декабрь")
+hc$x$conf_opts$lang$shortMonths = c("Янв", 	"Фев",	"Мар",	"Апр",	"Май",	"Июн",	"Июл",	"Авг",	"Сен",	"Окт",	"Ноя",	"Дек")
+
+hc
+```
+
+
+[*Примечание: стоимость железнодорожной контейнерной перевозки определяется как ставка на перевозку 40-футового контейнера собственности перевозчика (COC) по маршруту CY Москва – FOR Новосибирск. Этот маршрут является одним из самых востребованных во внутрироссийском сообщении. Источник – ежемесячные отчёты ЦЦИ «Сухопутная контейнерная логистика». Полный список публикуемых ставок доступен в [Спецификации ставок сухопутной логистики.](../methodology/specs-logistics.qmd)*]{style="font-size:0.75em"}
+
 
 :::
 
