--- a/markets/markets-sea-freight.qmd
+++ b/markets/markets-sea-freight.qmd
@@ -17,19 +17,20 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
-*01.10.2024 Перевозки нефти*
+*08.10.2024 Перевозки нефти*
 
-**Российский фрахт копит силы для западных маршрутов**
+**Ставки фрахта устойчивы к вызовам Ближнего Востока**
 
-Ставки фрахта на перевозку нефти на Дальнем Востоке находятся на высоком уровне, ставки из западных портов должны начать восстановление в октябре.
+Ставки фрахта на перевозку нефти стабильны. Конфликт на Ближнем Востоке ограниченно воздействует на рынок, судовладельцы ждут роста ставок в октябре на фоне увеличения экспорта нефти.
+
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*25.09.2024 Перевозки нефтепродуктов*
+*09.10.2024 Перевозки нефтепродуктов*
 
-**Дешевый фрахт нефтепродуктов переносится на октябрь**
+**Фрахт светлых нефтепродуктов обновляет минимумы**
 
-Ставки фрахта на перевозку светлых нефтепродуктов продолжают оставаться на минимумах из-за ремонтов вторичных установок на российских НПЗ, по этой же причине экспорт мазута в сентябре приблизился к рекорду с 2022 г., что удерживает "темные" ставки на высоком уровне.
+Ставки фрахта на перевозку светлых нефтепродуктов упали и обновили годовой минимум. Перевозка темных нефтепродуктов стала премиальной, поэтому "светлый" флот может переориентироваться на мазут и битум"
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
