--- a/markets/markets-fertilizers.qmd
+++ b/markets/markets-fertilizers.qmd
@@ -13,7 +13,7 @@ format:
 
 ![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
 
-::: {.grid style="margin-left:0%"}
+::::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
@@ -40,7 +40,7 @@ avg = mean(df$value[df$year == '2023'], na.rm = TRUE)
 df$index = df$value / avg * 100
 
 hc = highchart() %>% 
-   hc_add_series(df, type = "line", hcaes(x = dt, y = index), color = "#1A4AFC", name = "Метанол (FOB Baltic)") %>% 
+   hc_add_series(df, type = "line", hcaes(x = dt, y = index), color = "#1A4AFC", name = "Индекс цен на карбамид") %>% 
    hc_xAxis(type = 'datetime') %>% 
    hc_yAxis(title  = list(text = '2023 = 100')) %>% 
    hc_exporting(enabled = FALSE) %>% 
@@ -54,7 +54,7 @@ hc
 
 ```
 :::
-:::
+:::::
 
 ### Методология
 
