--- a/markets/markets-railways-van.qmd
+++ b/markets/markets-railways-van.qmd
@@ -13,36 +13,58 @@ format:
 
 ![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
 
-::: {.grid style="margin-left:0%"}
+:::::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
 *30.09.2024*
 
-**Ставки на полувагоны замерли в ожидании индексации тарифа РЖД.** Ставки на предоставление полувагонов под перевозку угля не изменились в сентябре, однако стоимость логистики стала доступнее для экспортёров. 
+**Ставки на полувагоны замерли в ожидании индексации тарифа РЖД.** Ставки на предоставление полувагонов под перевозку угля не изменились в сентябре, однако стоимость логистики стала доступнее для экспортёров.
+
+Переход на новый принцип индексации грузового железнодорожного тарифа РЖД и его резкий рост в 2025 г. может существенно снизить доходность оперирования полувагонами.
+
+В августе на сети РЖД обновлён очередной исторический рекорд по отправке контейнеров в полувагонах, а погрузка металлических руд впервые превысила показатели прошлого года (10,5 млн т, +1,1% г/г). 
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-**Транспортировка угля в сентябре стала немного доступнее.** В настоящее время участники рынка ожидают принятия решения о величине индексации тарифа РЖД за пользование инфраструктурой. После этого операторы пересмотрят и стоимость своих услуг по предоставлению подвижного состава (в которую входит оплата тарифа РЖД за порожний подсыл вагона). 
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-**Рентабельность операторского бизнеса находится под вопросом.** Возросший пассажиропоток на Юге России, а также работы по развитию ж.-д инфраструктуры - традиционные сезонные факторы, негативно влияющие на объемы и скорость доставки угля в порты. 
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-**Ценовые предложения на рынке угля.** Цены на энергетический уголь калорийностью 6000 ккал/кг на базисе FOB Дальний Восток выросли в сентябре на 2 долл./т на фоне пополнения запасов перед праздниками. 
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-**Уголь тянет погрузку на сети РЖД вниз.** Погрузка каменного угля на сети РЖД в августе незначительно выросла к показателям предыдущих летних месяцев и составила 26,5 млн т (-4,7% г/г). 
-
-![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
-
-**Полувагоны меняют уголь и щебень на контейнеры и руду.** В условиях ужесточения денежно-кредитной политики, замедления строительной активности и сокращения расходов на инфраструктурные проекты в России, на сети РЖД продолжает снижаться погрузка стройматериалов. 
-
-![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
 :::
+
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
+
+### Ставка предоставления полувагона
+
+```{r,warning = FALSE, echo = FALSE, message = FALSE}
+
+library(highcharter)
+library(openxlsx)
+library(tidyr)
+
+df <- read.xlsx(xlsxFile = '../xls/сухопутная логистика.xlsx', sheet = 1, detectDates = TRUE) 
+dt = names(df)
+dt = as.Date(as.numeric(dt), origin = "1899-12-30")
+value = as.numeric(df[5,])
+df = data.frame(dt = dt, value = value)
+df = df[!is.na(df$value),]
+
+hc = highchart() %>% 
+   hc_add_series(df, type = "line", hcaes(x = dt, y = value), color = "#1A4AFC", name = "Ставка предоставления полувагона") %>% 
+   hc_xAxis(type = 'datetime') %>% 
+   hc_yAxis(title  = list(text = 'тыс.руб./вагон')) %>% 
+   hc_exporting(enabled = FALSE) %>% 
+   hc_tooltip(enabled  = FALSE)
+
+# поменять названия месяцев на русские. по умолчанию - на английском
+hc$x$conf_opts$lang$months = c("Январь"	,"Февраль",	"Март"	,"Апрель"	,"Май",	"Июнь", "Июль",	"Август",	"Сентябрь",	"Октябрь",	"Ноябрь",	"Декабрь")
+hc$x$conf_opts$lang$shortMonths = c("Янв", 	"Фев",	"Мар",	"Апр",	"Май",	"Июн",	"Июл",	"Авг",	"Сен",	"Окт",	"Ноя",	"Дек")
+
+hc
+```
+
+
+[*Примечание: ставка предоставления полувагона рассчитывается как среднее арифметическое между ставками предоставления типового полувагона под перевозку угля по наиболее ликвидным маршрутам экспорта: Кузбасс – порты Дальнего Востока; Кузбасс – порты Балтики; Кузбасс – порты Азово-Черноморского бассейна; Южная Якутия – порты Дальнего Востока. На эти маршруты приходится до 80% экспорта российского угля железнодорожным транспортом. Источник – ежемесячные отчёты ЦЦИ «Сухопутная логистика. Полувагоны». Полный список публикуемых ставок доступен в [Спецификации ставок сухопутной логистики.](../methodology/specs-logistics.qmd)*]{style="font-size:0.75em"}
+
+:::
+
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### События
@@ -59,4 +81,4 @@ format:
 
 [Спецификация ставок сухопутной логистики](../methodology/specs-logistics.qmd)
 :::
-:::
+::::::
