--- a/demo-subscription.qmd
+++ b/demo-subscription.qmd
@@ -53,3 +53,9 @@ format:
 [Азотные удобрения (еженедельно)](reports/2024-09-30%20ЦЦИ%20Азотные%20удобрения.pdf)
 
 [Азотные удобрения (еженедельно)](reports/2024-09-23%20ЦЦИ%20Азотные%20удобрения.pdf)
+
+### Метанол
+
+[Цены на метанол в России (ежемесячно)](reports/2024-06 PBC Monthly Methanol.pdf)
+
+[Цены на ароматические углеводороды и их производные в России (еженедельно)](reports/2024-07-18 PBC Weekly Aromatics.pdf)
