--- a/forecasts/forecast-fx.qmd
+++ b/forecasts/forecast-fx.qmd
@@ -31,7 +31,23 @@ rhandsontable(df, digits=1, rowHeaders = FALSE, width = 1200, height = 400)
 \*\*В скобках указаны значения предыдущего опроса
 :::
 
-::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
+
+:::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
+
+## Основные наблюдения
+
+Последнее повышение ключевой ставки до 19% и жесткий сигнал Банка России на будущие решения сместили ожидания консенсуса в пользу повышения ставки до 20% в пике цикла (было 18%). Альтернативные варианты широко не распространены (19% - 1 из 13 аналитиков). Прогноз по инфляции изменился менее значительно, но все также предполагает, что цель в 4% не будет достигнута в 2025 г. (консенсус – 5%).
+
+Прогнозы цен на нефть активно пересматриваются «вниз» из-за меньшего, чем ожидалось спроса в Китае. Консенсус предполагает 77-79 долл./барр. brent в 2025 г. (что все равно выше текущих 72-74 долл./барр.)
+
+Оценка дисконта цен на российскую нефть аналитиками сокращается до 10 долл./барр. на прогнозном периоде 2025 г., но это не «перекрывает» эффект от ожидаемого снижения мировых цен на нефть.
+
+Темпы смягчения монетарных политик ФРС и ЕЦБ пересматриваются. Консенсус ожидает более быстрого снижения ставок после последнего решения ФРС о снижении сразу на 0,5 п.п. (первое после начала цикла в 2022 г.).
+::::
+
+
+:::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
+::: {style="text-align: right"}
 ## Консенсус-прогноз курса юаня
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
@@ -70,17 +86,11 @@ hc$x$conf_opts$lang$shortMonths = c("Янв", 	"Фев",	"Мар",	"Апр",	"М
 hc
 ```
 :::
-
-:::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
-::: {style="text-align: right"}
-## Методология
-
-[Методология макроконсенсуса](../methodology/methodology-consensus-pbc.qmd)
-:::
 ::::
 
+
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
-### Список участников
+## Список участников
 
 В опросе приняли участие 14 профессиональных аналитика, 12 из них дали согласие на раскрытие информации об их участии в опросе
 
@@ -89,7 +99,7 @@ hc
 +========================================================+===========================================================+==================================================+
 | Акиндинова Наталья ("Центр Развития" НИУ ВШЭ)          | Васильев Михаил (Совкомбанк)                              | Куликов Дмитрий (АКРА)                           |
 +--------------------------------------------------------+-----------------------------------------------------------+--------------------------------------------------+
-| Байкова Анастастия, Мурашов станислав (Райффайзенбанк) | Виноградов Артем, Попов Юрий (Сберанк КИБ)                | Полевой Дмитрий (Астра управление активами)      |
+| Байкова Анастастия, Мурашов Cтанислав (Райффайзенбанк) | Виноградов Артем, Попов Юрий (Сбербанк КИБ)               | Полевой Дмитрий (Астра управление активами)      |
 +--------------------------------------------------------+-----------------------------------------------------------+--------------------------------------------------+
 | Бирюков Павел (Газпромбанк)                            | Жирнов Григорий                                           | Попов Денис (Промсвязьбанк)                      |
 +--------------------------------------------------------+-----------------------------------------------------------+--------------------------------------------------+
@@ -98,4 +108,14 @@ hc
 |                                                        | *2 участника не подтвердили согласие на раскрытие данных* |                                                  |
 +--------------------------------------------------------+-----------------------------------------------------------+--------------------------------------------------+
 :::
+
+
+:::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
+::: {style="text-align: left"}
+## Методология
+
+[Методология макроконсенсуса](../methodology/methodology-consensus-pbc.qmd)
+:::
+::::
+
 :::::::::
