--- a/markets/markets-fertilizers.qmd
+++ b/markets/markets-fertilizers.qmd
@@ -17,7 +17,31 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*07.10.2024 Азотные удобрения*
+
+**Рынок карбамида в ожидании результатов тендера RCF**
+
+Индийская компания RCF закрыла тендер на закупку карбамида, получив 21 предложение с совокупным объемом 2,6 млн т карбамида.
+
 ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
+
+*27.09.2024 Азотные удобрения*
+
+**Индийский тендер всколыхнул рынок карбамида**
+
+Индийская компания RCF спустя всего 3 недели с закрытия предыдущего индийского тендера объявила тендер на закупку карбамида, прием заявок осуществляется до 3 октября.
+
+![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
+
+
+*20.09.2024 Азотные удобрения*
+
+**Цены на карбамид в ожидании сезонных продаж**
+
+Индексы цен Prilled Urea и Granular Urea FOB Baltic остались без изменений на этой неделе.
+
+![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
+
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
