--- a/markets/markets-sea-freight.qmd
+++ b/markets/markets-sea-freight.qmd
@@ -13,7 +13,7 @@ format:
 
 ![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
 
-::: {.grid style="margin-left:0%"}
+::::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
@@ -23,14 +23,13 @@ format:
 
 Ставки фрахта на перевозку нефти стабильны. Конфликт на Ближнем Востоке ограниченно воздействует на рынок, судовладельцы ждут роста ставок в октябре на фоне увеличения экспорта нефти.
 
-
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
 *09.10.2024 Перевозки нефтепродуктов*
 
 **Фрахт светлых нефтепродуктов обновляет минимумы**
 
-Ставки фрахта на перевозку светлых нефтепродуктов упали и обновили годовой минимум. Перевозка темных нефтепродуктов стала премиальной, поэтому "светлый" флот может переориентироваться на мазут и битум"
+Ставки фрахта на перевозку светлых нефтепродуктов упали и обновили годовой минимум. Перевозка темных нефтепродуктов стала премиальной, поэтому "светлый" флот может переориентироваться на мазут и битум".
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
@@ -82,9 +81,9 @@ hc
 
 [Материалы →](../events/2024-09-13-crude.qmd)
 :::
-:::
+:::::
 
-::: {.grid style="margin-left:0%"}
+::::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Методология
 
@@ -95,4 +94,4 @@ hc
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 :::
-:::
+:::::
