--- a/methodology/specs-sunflower.qmd
+++ b/methodology/specs-sunflower.qmd
@@ -6,14 +6,14 @@ title-block-banner: none
 fig-format: svg
 ---
 
-![](../images/icon-chemicals.svg)
+![](../images/icon-oilseed.svg)
 
 ### Подсолнечное масло
 
 Продукт и его характеристики
 
 | Продукт                             | Характеристика                                                                                                                                                                                                                      | Сроки поставки               |
-|-------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------|
+|------------|------------------------------------------------|------------|
 | Russian Sunflower Oil FOB Black Sea | *сырое нерафинированное подсолнечное масло, масло подсолнечное нерафинированное высший сорт (наливом), масло подсолнечное нерафинированное первый сорт (наливом), масло подсолнечное нерафинированное для промышленной переработки* | 15-45 дней со дня публикации |
 
 #### Базис
