--- a/markets/markets-oilseed.qmd
+++ b/markets/markets-oilseed.qmd
@@ -29,7 +29,7 @@ format:
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 
-#### Разница цен на растительные масла в начале октября 2024, долл./т
+#### Премия/дисконт пальмового масла к подсолнечному, долл.
 
 ```{r,warning = FALSE, echo = FALSE, message = FALSE}
 
@@ -38,12 +38,13 @@ library(openxlsx)
 library(tidyr)
 
 df <- read.xlsx(xlsxFile = '../xls/график_подсолнечное масло.xlsx', sheet = 1) 
-df = pivot_longer(df, -1, names_to = "id")
-names(df)[1] = 'type'
+names(df) = c('date', 'value')
+df$date <- as.Date(df$date, origin = "1899-12-30")
 
 hc = highchart() %>%
-   hc_add_series(df, type = "column", hcaes(x = id, y = value, group = type), color = c("#1A4AFC", "#FF7900"), stacking = "normal") %>%
-   hc_xAxis(type = 'category') %>% 
+   hc_add_series(df, type = "column", hcaes(x = date, y = value), color = c("#1A4AFC"), 
+                 name = "Премия/дисконт пальмового масла к подсолнечному, долл.") %>%
+   hc_xAxis(type = 'datetime') %>% 
    hc_yAxis(title  = list(text = 'долл./т')) %>%
    hc_exporting(enabled = FALSE) %>%
    hc_tooltip(enabled  = FALSE)
